@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.7.14) unstable; urgency=low
   * resource-address: added BASE support
   * fcgi-client: check the request ID in response packets
   * http-client: check response body when request body is closed
+  * html-escape: use the last ampersand before the semicolon
 
  --
 
